# fraud-detection-k8s

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
api/: main.py  pyproject.toml
k8s/: deployment.yaml
notebooks/: frad_detection.ipynb  fraud_detection.ipynb
